# hackbus

./: .gitignore  README.md  SConstruct  hackbus.cabal  pkgconfig.py
examples/: ActivityDetect.hs  HacklabDemo.hs  HacklabEka.hs  HacklabJkl.hs  JsonApiDemo.hs  PersistenceDemo.hs  TaidacentPower.hs
haskell_src/System/Hardware/: Modbus.hs
interactive/: .ghci  Interactive.hs
interactive/modbus/: Interactive.hs
src/: main.c
src/Control/Hackbus/: Accumulator.hs  AlarmSystem.hs  Exceptions.hs  JsonCommands.hs  Logging.hs  ModuleUtils.hs  PeekPoke.hs  Persistence.hs  TaskQueue.hs  Trinary.hs  UnixJsonInterface.hs  UnixSocket.hs
src/Control/Hackbus/Math/: DewPoint.hs  Sauna.hs
src/Control/Hackbus/Modules/: HfEasy.hs
src/Media/Streaming/: Vlc.hs
src/System/Hardware/: Modbus.hs
src/System/Hardware/Modbus/: Abstractions.hs  BusMaster.hs  LowLevel.hs  Types.hs
