name:          hackbus
version:       0.0.9
synopsis:      Modbus library
description:   Libmodbus bindings for Haskell.
category:      Hardware
license:       LGPL-3
--license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@iki.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/zouppen/hackbus

library
  hs-source-dirs:  src
  exposed-modules: System.Hardware.Modbus
                 , System.Hardware.Modbus.Abstractions
                 , System.Hardware.Modbus.LowLevel
                 , System.Hardware.Modbus.Types
                 , Control.Hackbus.Logging
                 , Control.Hackbus.UnixJsonInterface
                 , Control.Hackbus.UnixSocket
                 , Control.Hackbus.JsonCommands
                 , Media.Streaming.Vlc
  cc-options:      -std=gnu99
  pkgconfig-depends: libmodbus
  build-depends:
                aeson >= 1.1,
                base >= 4 && < 5,
                bytestring >= 0.10,
                containers >= 0.5,
                directory >= 1.3,
                monad-loops >= 0.4.3,
                network >= 2.6,
                process >= 1.4.3,
                stm >= 2 && < 3,
                text >= 1.2,
                unix >= 2.7
