name:          hackbus
version:       0.0.15
synopsis:      Modbus library
description:   Libmodbus bindings for Haskell.
category:      Hardware
license:       LGPL-3
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@iki.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/zouppen/hackbus

library
  hs-source-dirs:  src
  exposed-modules: System.Hardware.Modbus
                 , Control.Hackbus.AlarmSystem
                 , Control.Hackbus.JsonCommands
                 , Control.Hackbus.Logging
                 , Control.Hackbus.Modules.HfEasy
                 , Control.Hackbus.Persistence
                 , Control.Hackbus.UnixJsonInterface
                 , Control.Hackbus.UnixSocket
                 , Media.Streaming.Vlc
                 , System.Hardware.Modbus.Abstractions
                 , System.Hardware.Modbus.LowLevel
                 , System.Hardware.Modbus.Types
  cc-options:      -std=gnu99
  pkgconfig-depends: libmodbus
  build-depends:
                aeson >= 1.1,
                base >= 4 && < 5,
                bytestring >= 0.10,
                curl >= 1.3.7,
                curl-aeson >= 0.0.4,
                directory >= 1.3,
                monad-loops >= 0.4.3,
                network >= 2.6,
                process >= 1.4.3,
                stm >= 2 && < 3,
                text >= 1.2,
                unix >= 2.7,
                unordered-containers >= 0.2.10.0
